[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/Waffles/Editor/Nodes/ReplacementNode.gd" type="Script" id=1]

[node name="ReplacementNode" type="GraphNode"]
margin_right = 150.0
margin_bottom = 155.0
title = "ReplacementNode"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 153.0
margin_bottom = 164.0
size_flags_vertical = 3

[connection signal="close_request" from="." to="." method="_on_ReplacementNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_ReplacementNode_resize_request"]
